# bwy_bot

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bwy.service.example  bwy_bot.db  default.nginx.example  delete_self.py  dev-requirements.txt  env.example  fastapi.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0cf67d67c254_delete_choice_am_pm_from_excwrk.py  0d0a7629fd9b_many_many_course_workout.py  156d3ec943d8_gender.py  15c3f2abf6a7_add_table_exercise.py  233e2a4f498d_add_purpose_in_user.py  2396728d9816_fix_change_user_fields.py  26dc74399ef2_add_table_shedule_course.py  453af9249583_change_schedule_fields_and_others.py  5771c00fce6d_all_remainder_true.py  634b7fd3a5cc_change_field_name_description.py  6642ff71df04_add_stop_reminder_adv_and_table_.py  76aa57ba6258_chande_workouts_tables.py  80fd02331d15_fix_change_schedule_fields_and_others_py.py  8a43f3b281b0_delete_shedule_add_schedule.py  9d085722b0ed_first.py  9f3f6831128a_add_fields_user_file_new_tables_in_.py  9f9a4c508dbe_first_migration.py  c464c4d263c4_add_table_calorie.py  cece0886f5f1_correct_user_model.py  d12726d58fe6_first.py  d96b9ff8107b_location_in_user_and_utc_offset_in_.py  e5f22b24e494_add_new_tables_in_questionaire.py  f4abf933a5ac_new_calorie_string.py  fb35598b2204_add_sequence_number.py  ffdd1d3820b3_add_table_sleep.py
app/: __init__.py  bot.py  bot_a.py  bot_old.py  bot_polling.py  bot_t.py  main.py  main.py.orig  main_p.py
app/admin/: __init__.py  auth.py  view.py
app/core/: __init__.py  base.py  config.py  constants.py  db.py  enum.py  logging.py
app/crud/: __init__.py  base.py  calorie.py  file.py  schedule.py  settings.py  sleep.py  user.py  workout.py
app/data/: survey.py
app/exceptions/: __init__.py  admin_exceptions.py  calorie.py  survey_exceptions.py  workout.py
app/filters/: __init__.py  survey_filters.py
app/handlers/: __init__.py  menu_processor.py  other_handler.py  routers.py  schedule_handler.py  settings_handler.py  sleep_handlers.py  states.py  survey.py  survey_handlers.py  user_handlers.py
app/handlers/callbacks/: __init__.py  calorie.py  other_handler.py  schedule_handler.py  sleep.py  survey.py  survey_handlers.py  user_handlers.py  workout.py
app/keyboards/: __init__.py  calories_kb.py  common_kb.py  main_menu.py  mode_kb.py  schedule_kb.py  settings_kb.py  sleep_kb.py  sleep_kb_old.py  survey_kb.py  trainings_kb.py  workout_kb.py
app/lexicon/: lexicon.py
app/middlewares/: __init__.py  db.py
app/models/: __init__.py  calorie.py  exercise.py  file.py  questionnaire.py  schedule.py  sleep.py  user.py  workout.py
app/schemas/: __init__.py  file.py  questionnaire.py  sleep.py  user.py
app/static/: jpeg  jpg
app/utils/: __init__.py  const.py  pagination.py  schedule.py  sleep.py  survey.py  utils.py
app/validators/: __init__.py  admin_view_validators.py  survey_validators.py
